feat(post-service): optimize caching feed and fanout